# sd-helper

./: .gitignore  .sd-helper.sample.yaml  CLAUDE.md  README.md  main.py  pyproject.toml
scripts/: config.yaml  download_wheels.sh  install.sh  upload_images.py
sd_helper/: __init__.py  auth.py  cli.py  docker.py  tui.py
sd_helper/api/: __init__.py  llm.py
sd_helper/commands/: __init__.py  data.py  docker.py  iam.py  llm.py  nisco.py
sd_helper/data/: __init__.py  collector.py  http_logger.py  request_template.py  runner.py  storage.py
