[project]
name = "sd-helper-cli"
version = "0.1.4"
description = "CLI tool for Huawei Cloud Service Delivery Engineers"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Sean", email = "xuopoj@gmail.com"}
]
keywords = ["huawei", "cloud", "cli", "modelarts", "llm", "service-delivery"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "httpx>=0.27.0",
    "click>=8.1.0",
    "pyyaml>=6.0",
    "textual>=0.80.0",
    "Pillow>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/xuopoj/sd-helper"
Repository = "https://github.com/xuopoj/sd-helper"

[project.scripts]
sd-helper = "sd_helper.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sd_helper"]

[tool.uv]
package = true
